--- a/class3/listas.html
+++ b/class3/listas.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <p>Lista sin elemento gráfico:</p>
-<ul style="list-style: none;">
+<ul style="list-style: none; color: brown;">
 <li>Elemento 1</li>
 <li>Elemento 2</li>
 <li>Elemento 3</li>
@@ -34,7 +34,7 @@
 </ol>
 
 <p>Lista con letras griegas:</p>
-<ol style="list-style: lower-greek">
+<ol type="lower-greek">
 <li>Elemento 1</li>
 <li>Elemento 2</li>
 <li>Elemento 3</li>
